--- a/Testweb/build.xml
+++ b/Testweb/build.xml
@@ -6,7 +6,7 @@
         <delete dir="build" />
     </target>
  
-    <target name="war" depends="compile">
+    <target name="war">
         <war destfile="${build}/TestWeb.war" webxml="WebContent/WEB-INF/web.xml">
             <fileset dir="WebContent" includes="**/*.jsp" />
  
