--- a/Testweb/build.xml
+++ b/Testweb/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project name="TestWeb" default="war" basedir=".">
     <property name="classes" value="build/classes" />     
-     <property name="build" value="build" />
+     <property name="build" value="/var/www/html/repo/Testweb" />
     
     <target name="clean">
         <delete dir="build" />
